// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SecurityContainer /> renders apiKey type 1`] = `
<section
  className={undefined}
  id="api_key"
>
  <div
    className={undefined}
  >
    <p>
      To use this authentication scheme, pass 
      <code>
        api_key: credentials
      </code>
      
       as a request header.
    </p>
  </div>
</section>
`;

exports[`<SecurityContainer /> renders http type 1`] = `
<section
  className={undefined}
  id="JWT"
>
  <div
    className={undefined}
  >
    <p>
      To use this authentication scheme, pass 
      <code>
        Authorization: bearer credentials
      </code>
      , formatted as JWT
       as a request header.
    </p>
  </div>
</section>
`;

exports[`<SecurityContainer /> renders oauth2 type in Method 1`] = `
<section
  className={undefined}
  id="oauth2"
>
  <h5>
    oauth2
     
    <code
      className={undefined}
    >
      type=
      oauth2
    </code>
  </h5>
  <div>
    <div
      className={undefined}
    >
      <h5>
        <code>
          implicit
        </code>
         flow
      </h5>
      <dl
        className={undefined}
      >
        <dt>
          Authorization URL
        </dt>
        <dd>
          https://example.com/api/oauth/dialog
        </dd>
      </dl>
      <div
        className={undefined}
      >
        <h5>
          Available scopes
        </h5>
        <ul>
          <li>
            <span>
              write:pets
            </span>
             
            modify pets in your account
          </li>
          <li>
            <span>
              read:pets
            </span>
             
            read your pets
          </li>
        </ul>
      </div>
    </div>
    <div
      className={undefined}
    >
      <h5>
        <code>
          authorizationCode
        </code>
         flow
      </h5>
      <dl
        className={undefined}
      >
        <dt>
          Authorization URL
        </dt>
        <dd>
          https://example.com/api/oauth/dialog
        </dd>
        <dt>
          Token URL
        </dt>
        <dd>
          https://example.com/api/oauth/token
        </dd>
      </dl>
      <div
        className={undefined}
      >
        <h5>
          Available scopes
        </h5>
        <ul>
          <li>
            <span>
              write:pets
            </span>
             
            modify pets in your account
          </li>
          <li>
            <span>
              read:pets
            </span>
             
            read your pets
          </li>
        </ul>
      </div>
    </div>
  </div>
</section>
`;

exports[`<SecurityContainer /> renders oauth2 type in Schema 1`] = `
<section
  className={undefined}
  id="oauth2"
>
  <h3>
    oauth2
     
    <code
      className={undefined}
    >
      type=
      oauth2
    </code>
  </h3>
  <div>
    <div
      className={undefined}
    >
      <h4>
        <code>
          implicit
        </code>
         flow
      </h4>
      <dl
        className={undefined}
      >
        <dt>
          Authorization URL
        </dt>
        <dd>
          https://example.com/api/oauth/dialog
        </dd>
      </dl>
      <div
        className={undefined}
      >
        <h5>
          Available scopes
        </h5>
        <ul>
          <li>
            <span>
              write:pets
            </span>
             
            modify pets in your account
          </li>
          <li>
            <span>
              read:pets
            </span>
             
            read your pets
          </li>
        </ul>
      </div>
    </div>
    <div
      className={undefined}
    >
      <h4>
        <code>
          authorizationCode
        </code>
         flow
      </h4>
      <dl
        className={undefined}
      >
        <dt>
          Authorization URL
        </dt>
        <dd>
          https://example.com/api/oauth/dialog
        </dd>
        <dt>
          Token URL
        </dt>
        <dd>
          https://example.com/api/oauth/token
        </dd>
      </dl>
      <div
        className={undefined}
      >
        <h5>
          Available scopes
        </h5>
        <ul>
          <li>
            <span>
              write:pets
            </span>
             
            modify pets in your account
          </li>
          <li>
            <span>
              read:pets
            </span>
             
            read your pets
          </li>
        </ul>
      </div>
    </div>
  </div>
</section>
`;

exports[`<SecurityContainer /> renders openIdConnect type in Method 1`] = `
<section
  className={undefined}
  id="openIdConnect"
>
  <h5>
    openIdConnect
     
    <code
      className={undefined}
    >
      type=
      openIdConnect
    </code>
  </h5>
  <div>
    <dl
      className={undefined}
    >
      <dt>
        OpenID Connect URL
      </dt>
      <dd />
    </dl>
  </div>
</section>
`;

exports[`<SecurityContainer /> renders openIdConnect type in Schema 1`] = `
<section
  className={undefined}
  id="openIdConnect"
>
  <h3>
    openIdConnect
     
    <code
      className={undefined}
    >
      type=
      openIdConnect
    </code>
  </h3>
  <div>
    <dl
      className={undefined}
    >
      <dt>
        OpenID Connect URL
      </dt>
      <dd />
    </dl>
  </div>
</section>
`;
